2005-01-03  Sebastien Pouliot  <sebastien@ximian.com> 

	* DESCryptoServiceProvider.cs: Refactored ECB/ProcessBlock to allow
	TripleDES to be more efficient by using the permutations itself. 
	* TripleDESCryptoServiceProvider.cs: Removed memory allocation in 
	Transform's ECB method. Changed code to directly call DES's 
	permutations. MACTripleDES is now 20% faster (didn't have any other
	3DES benchmark on hand) and requires much less memory.

2005-01-03  Sebastien Pouliot  <sebastien@ximian.com>

	* DESCryptoServiceProvider.cs: Now using pre-computed tables (instead
	of using a static constructor to compute them). Not much change 
	performance-wise unless you used DES but only "a little" ;-). The old
	code (who computed the results) is still present but commented,

2005-01-02  Sebastien Pouliot  <sebastien@ximian.com>

	* SHA1CryptoServiceProvider.cs: Removed memory allocation in 
	ProcessBlock method (now global). This gives up to 8% performance
	increase when multiple blocks are being used.
	* SHA256Managed.cs: Removed memory allocation in ProcessBlock method
	(now global). This gives up to 5% performance increase when multiple 
	blocks are being used.

2004-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DataProtectionScope.cs: Moved in System.Security.dll
	* MemoryProtectionScope.cs: Moved in System.Security.dll
	* ProtectedData.cs: Moved in System.Security.dll
	* ProtectedMemory.cs: Moved in System.Security.dll

2004-12-22  Sebastien Pouliot  <sebastien@ximian.com>

	* RSA.cs: Throw the proper CryptographicException exception when 
	exporting a private key without CRT parameters, while keeping the
	ArgumentNullException when the private exponent (D) is missing.

2004-12-06  Sebastien Pouliot  <sebastien@ximian.com>

	* RSACryptoServiceProvider.cs: Adjust DecryptValue to the fact that 
	Mono's RSAManaged support decryption without CRT while MS requires it.

2004-11-26  Sebastien Pouliot  <sebastien@ximian.com>

	* CryptoAPITransform.cs: 